# nucachis

./: CMakeLists.txt  README.md
assets/: logo.xcf
docs/: ini.md  vca.md
include/: Cache.h  GUI.h  Logo.h  Main.h  MainMemory.h  MemoryElement.h  Misc.h  ParserConfig.h  ParserTrace.h  PolicyWrite.h  Simulator.h
src/: Cache.cpp  GUI.cpp  Main.cpp  MainMemory.cpp  MemoryElement.cpp  Misc.cpp  ParserConfig.cpp  ParserTrace.cpp  Simulator.cpp
traces/: L1234.ini  L12_Complex.ini  L12_WriteBack.ini  L1_LRU.ini
